--- a/26-PROYECTO-AdministrarCitas/index.html
+++ b/26-PROYECTO-AdministrarCitas/index.html
@@ -94,7 +94,7 @@
                     value='Registrar Paciente'
                 />
               </form>
-          </div>
+          </div> 
 
           <div class="md:w-1/2 lg:w-3/5 md:h-screen overflow-y-scroll">
               <h2 class="font-black text-3xl text-center">Listado Pacientes</h2>
@@ -108,6 +108,6 @@
           </div>
       </div>
 
-      <script src="js/app.js"></script>
+      <script src="js/app.js" type="module"></script>
 </body>
 </html>
