--- a/32-PROYECTO-CRMIndexedDB/editar-cliente.html
+++ b/32-PROYECTO-CRMIndexedDB/editar-cliente.html
@@ -86,6 +86,8 @@
             </div>
         </main>
     </div>
+
     <script src="js/editarcliente.js"></script>
+    <script src="js/funciones.js"></script>
 </body>
 </html>
