Añadiendo nuevo proyecto. Cotizador de bitcoin en tiempo real

--- a/39-PROYECTO-Criptomonedas/index.html
+++ b/39-PROYECTO-Criptomonedas/index.html
@@ -24,8 +24,9 @@
                             class="u-full-width"
                             id="moneda"
                             name="moneda"
+                            data-coin="nombreMoneda"
                         >
-                                <option value="">Elige tu moneda</option>
+                                <option value="" disabled selected>Elige tu moneda</option>
                                 <option value="USD">Dolar Estadounidense</option>
                                 <option value="MXN">Peso Mexicano</option>
                                 <option value="GBP">Libras</option>
@@ -40,8 +41,9 @@
                             class="u-full-width"
                             id="criptomoneda"
                             name="criptomoneda"
+                            data-coin="nombreCripto"
                         >
-                            <option value="">Elige tu criptomoneda</option>
+                            <option value="" disabled selected>Elige tu criptomoneda</option>
                         </select>
                     </div>
                     </div>
